# fit-coach

./: .env.docker.example  .gitignore  AI_AGENTS_COMPLETE.md  MASTER_TEST_REPORT.md  README.md  SECURITY.md  SECURITY_FIXES_REPORT.md  SETUP.md  VISION_AGENT_MVP_COMPLETE.md  VISION_AGENT_SETUP.md  app_compability.md  docker-compose.production.yml  docker-compose.yml  project.md
backend/: .dockerignore  .env.example  AGENTS_API_DOCUMENTATION.md  BACKEND_MVP_VERIFICATION.md  Dockerfile  GEMINI_VISION_SETUP.md  LOGGING_MONITORING_GUIDE.md  README.md  SERVICES.md  SLEEP_TEST_REPORT.md  SLEEP_TEST_SUMMARY.md  TEST_REPORT.md  alembic.ini  pyproject.toml  requirements.txt  test_auth.json  test_day_create.json  test_gemini_vision.py  test_login.json  test_vision_agent.py  test_vision_simple.py
backend/alembic/: env.py
backend/alembic/versions/: 0df93e546a3f_add_weight_to_days.py  add_audit_logs_table.py  (+10 more)
backend/app/: __init__.py  config.py  main.py
backend/tests/: AGENT_TESTS_REPORT.md  BATCH2_TEST_REPORT.md  BATCH3_TEST_REPORT.md  COVERAGE_TABLE.md  FINAL_SUMMARY.txt  QUICK_START.md  TEST_COVERAGE_REPORT.md  conftest.py  test_agent_infrastructure.py  test_agent_tools.py  test_agents_api.py  test_agents_coordination.py  test_agents_streaming.py  test_ai_api.py  test_batch3_api.py  test_crud_api.py  test_day_crud_api.py  test_goals_api.py  test_logging_monitoring.py  test_meal_plans_api.py  test_notifications_api.py  test_security_modules.py  test_sleep_api.py  test_training_programs_api.py  test_user_management_api.py  test_user_management_api_backup.py  test_voice_api.py
(+324 files in other folders)
